--- a/sponsors.html
+++ b/sponsors.html
@@ -12,7 +12,7 @@ description: We Are Currently Seeking Sponsors!
 					Through collaboration and engagement with our club, your company can identify future employees, 
 					build brand awareness among a targeted audience of tech-savvy students, and contribute to shaping 
 					the next generation of innovators. Please see our
-					<a href="{{ site.baseurl }}/Joint_Sponsorship_Package.pdf" target="_blank">Joint Sponsorship Package</a> 
+					<a href="{{ site.baseurl }}/Joint_Campus_Sponsorship_Package" target="_blank">Joint Sponsorship Package</a> 
 					for more details!
 			</div>
 			<div class="image">
